--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,74 @@
-.App {
+img{
+  width: 100%;
+  height: auto;
+}
+.container {
+  position: relative;
+  text-align: center;
+
+}
+.centered {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #fff;
+}
+.centered1 {
+  position: absolute;
+  top:6.5%;
+  left: 50%;
+  width: 35%;
+  transform: translate(-50%, -50%);
+  padding:17px;
+  border:none;
+  border-radius: 10px;
+  box-shadow:  0 4px 8px 0 rgba(143, 142, 142, 0.2);
+  background-color: rgba(22, 109, 190, 0.541);
+}
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color:#fff;
+  font-size: 18px;
+  opacity: 1; /* Firefox */
+}
+.location-box .location{
+color:#fff;
+font-size: 50px;
+font-weight: 500;
+text-align: center;
+text-shadow: 3px 3px rgba(132, 153, 243, 0.438);
+}
+.location-box .date{
+  color:#fff;
+  font-size: 20px;
+  font-weight: 200;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.weather{
+  text-align: center;
 }
+.weather-box .temp{
+  position: relative;
+  display: inline-block;
+  margin: 5px;
+  background-color: rgba(108, 184, 255, 0.486);
+  padding:15px 25px;
+  box-shadow:  0 4px 8px 0 rgba(175, 174, 174, 0.2);
+  border-radius: 16px;
+ font-size: 100px;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.centered2 {
+  position: absolute;
+  top: 62%;
+  left: 50%;
+ 
+  transform: translate(-50%, -50%);
+  color: #fff;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.weather-box .weather{
+  color: #fff;
+  font-size: 48px;
+  font-weight: 700;
+  text-shadow: 3px 3px rgba(132, 153, 243, 0.438);
 }
